--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ disqus_shortname: 'tristankirkpatrick'
 
 # Details for the RSS feed generator
 url:            'http://your-blog-url.example.com'
-author:         'Your Name'
+author:         'Tristan Kirkpatrick'
 authorTwitter:  'YourTwitterUsername'
 
 permalink:       /:year/:title/
